2006-10-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/procbrowser.c: use pygimp_init_pygobject here too.
	Report and patch from Eric Lamarque (fixes bug #363516).

2006-10-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptransformtool.c
	(gimp_transform_tool_button_release): call response(OK) instead of
	calling doit() directly, so all transform confirmation goes
	through response() now.

2006-10-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_draw): show
	the outline of the selection while transforming it.
	Fixes bug #362587.

2006-10-19  Michael Natterer  <mitch@gimp.org>

	* app/actions/tools-actions.c (tools_alternative_actions): remove
	the accelerator from the "Arbitrary Rotation" action, Shift+R
	should switch to the rotate tool, not switch to the rotate tool
	*and* select "Transform Layer" from the tool options.

2006-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/script-fu.init: don't load
	script-fu-compat.init here.

	* plug-ins/script-fu/scheme-wrapper.c (tinyscheme_init): load it
	here, from the same place where script-fu.init was found.

	* plug-ins/script-fu/script-fu-interface.c: made the code more
	robust against invalid adjustment types.

2006-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.[ch]
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-types.h: don't look at the menu path
	to see if a script is image-based. Instead check the passed and the
	expected parameter types.

	* plug-ins/script-fu/scripts/tileblur.scm: global variables won't
	work with tiny-scheme.

2006-10-19  Tor Lillqvist  <tml@novell.com>

	* plug-ins/script-fu/tinyscheme/scheme.c
	(file_push, port_rep_from_filename): Open files in binary mode.

2006-10-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_draw): allow